--- a/Steck_Aufgabe81.html
+++ b/Steck_Aufgabe81.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe81.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -35,7 +36,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Berührt im Punkt (2|0) die x-Achse bedeutet zum einen: 
+1. Berührt im Punkt (2|0) die x-Achse bedeutet 
+zum einen: 
 
 f<sub>(2)</sub> = 0 --> 
 
@@ -43,7 +45,8 @@ a * 2<sup>4</sup> + b * 2<sup>3</sup> + c * 2<sup>2</sup> + d * 2 + e = 0 -->
 
 16a + 8b + 4c + 2d + e = 0        I 
 
-2. Berührt im Punkt (2|0) die x-Achse bedeutet zum anderen: 
+2. Berührt im Punkt (2|0) die x-Achse bedeutet 
+zum anderen: 
 
 f’<sub>(2)</sub> = 0 --> 
 
@@ -51,7 +54,8 @@ f’<sub>(2)</sub> = 0 -->
 
 32a + 12b + 4c + d = 0        II 
 
-3. Hat im Punkt (0|0) einen Wendepunkt bedeutet zum einen:  
+3. Hat im Punkt (0|0) einen Wendepunkt bedeutet 
+zum einen:  
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -59,7 +63,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 0 -->
 
 e = 0 
 
-4. Hat im Punkt (0|0) einen Wendepunkt bedeutet zum anderen:  
+4. Hat im Punkt (0|0) einen Wendepunkt bedeutet 
+zum anderen:  
 
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -92,7 +97,8 @@ I * (-2) + II
  
              b = -3/4 = -0,75            
  
-b = -0,75 und c = 0 und d = 1 und e = 0 in I eingesetzt: 
+b = -0,75 und c = 0 und d = 1 und e = 0 in I 
+eingesetzt: 
  
 16a + 8 * (-0,75) + 2 * 1 = 0 
  
