--- a/Steck_Aufgabe83.html
+++ b/Steck_Aufgabe83.html
@@ -24,8 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe83.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -33,10 +33,11 @@ f’<sub>(x)</sub> = 4ax<sup>3</sup> + 2cx
  
 f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c  
 
-4 Bedingungen: (eine mehr als nötig, wegen der Symmetrie 
-sind die Berührpunkte gleichwertig)  
+4 Bedingungen: (eine mehr als nötig, wegen der 
+Symmetrie sind die Berührpunkte gleichwertig)  
  
-1. Hat im Punkt (0|-4) einen Tiefpunkt bedeutet zum einen:  
+1. Hat im Punkt (0|-4) einen Tiefpunkt bedeutet 
+zum einen:  
  
 f<sub>(0)</sub> = -4 --> 
 
@@ -44,13 +45,15 @@ a * 0<sup>4</sup> + c * 0<sup>2</sup> + e = - 4 -->
 
 e = -4 
  
-2. Hat im Punkt (0|-4) einen Tiefpunkt bedeutet zum anderen:  
+2. Hat im Punkt (0|-4) einen Tiefpunkt bedeutet 
+zum anderen:  
  
 f’(0) = 0 --> 
 
 4a * 0<sup>3</sup> + 2c * 0 = 0 liefert kein Ergebnis 
  
-3. Berührt die x-Achse bei (2|0) bedeutet zum einen:  
+3. Berührt die x-Achse bei (2|0) bedeutet zum 
+einen:  
  
 f(2) = 0 --> 
 
@@ -58,7 +61,8 @@ a * 2<sup>4</sup> + c * 2<sup>2</sup> - 4 = 0 -->
 
 16a + 4c - 4 = 0       I 
  
-4. Berührt die x-Achse bei (2|0) bedeutet zum anderen:  
+4. Berührt die x-Achse bei (2|0) bedeutet zum 
+anderen:  
  
 f’(2) = 0 --> 
 
