--- a/Steck_Aufgabe84.html
+++ b/Steck_Aufgabe84.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe84.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -43,7 +44,8 @@ f’’<sub>(3)</sub> = 0 -->
 
 108a + 18b + 2c = 0       I 
 
-2. Hat einen Wendepunkt im Punkt (-2|-81) bedeutet zum einen:  
+2. Hat einen Wendepunkt im Punkt (-2|-81) bedeutet
+zum einen:  
 
 f<sub>(-2)</sub> = - 81 --> 
 
@@ -51,7 +53,8 @@ a * (-2)<sup>4</sup> + b * (-2)<sup>3</sup> + c * (-2)<sup>2</sup> + d * (-2) + 
 
 16a - 8b + 4c - 2d + e = -81       II 
 
-3. Hat einen Wendepunkt im Punkt (-2|-81) bedeutet zum anderen: 
+3. Hat einen Wendepunkt im Punkt (-2|-81) bedeutet 
+zum anderen: 
 
 f’’<sub>(-2)</sub> = 0 --> 
 
