--- a/Steck_Aufgabe86.html
+++ b/Steck_Aufgabe86.html
@@ -24,8 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe86.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -43,8 +43,8 @@ a * 0<sup>4</sup> + c * 0<sup>2</sup> + e = -4 -->
 
 e = -4 
  
-2. Hat in (-4|0) eine waagerechte Tangente bedeutet zum einen: 
-(e = -4 eingesetzt)  
+2. Hat in (-4|0) eine waagerechte Tangente 
+bedeutet zum einen: (e = -4 eingesetzt)  
  
 f<sub>(-4)</sub> = 0 --> 
 
@@ -52,7 +52,8 @@ a * (-4)<sup>4</sup> + c * (-4)<sup>2</sup> = 0 -->
 
 256a + 16c - 4 = 0     I 
  
-3. Hat in (-4|0) eine waagerechte Tangente bedeutet zum anderen :  
+3. Hat in (-4|0) eine waagerechte Tangente 
+bedeutet zum anderen :  
  
 f’<sub>(-4)</sub> = 0 --> 
 
