--- a/Steck_Aufgabe87.html
+++ b/Steck_Aufgabe87.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe87.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -53,7 +54,8 @@ f’’<sub>(0)</sub> = 0 -->
 
 c = 0 
  
-3. Hat im Wendepunkt (0|0) eine waagerechte Tangente bedeutet:  
+3. Hat im Wendepunkt (0|0) eine waagerechte 
+Tangente bedeutet:  
  
 f’<sub>(0)</sub> = 0 --> 
 
@@ -61,8 +63,8 @@ f’<sub>(0)</sub> = 0 -->
 
 d = 0      
  
-4. Hat an der Stelle x = 6 eine waagerechte Tangente bedeutet: 
-(c = 0 und d = 0 eingesetzt)  
+4. Hat an der Stelle x = 6 eine waagerechte 
+Tangente bedeutet: (c = 0 und d = 0 eingesetzt)  
  
 f’<sub>(6)</sub> = 0 --> 
 
@@ -76,8 +78,9 @@ f’<sub>(6)</sub> = 0 -->
   b = - ------ = -8a 
           72          
  
-5. Schneidet die x-Achse mit der Steigung -8 bedeutet zum einen: 
-(c = 0 und d = 0 und e = 0 eingesetzt)    
+5. Schneidet die x-Achse mit der Steigung -8 
+bedeutet zum einen: (c = 0 und d = 0 und 
+e = 0 eingesetzt)    
 
 f’<sub>(x)</sub> = -8  
  
@@ -91,16 +94,19 @@ a(4x<sup>3</sup> - 24x<sup>2</sup>) = - 8 |:(4x<sup>3</sup> - 24x<sup>2</sup>)
 a = ------------- 
      4x<sup>3</sup> - 24x<sup>2</sup>     
  
-5. Schneidet die x-Achse mit der Steigung -8 bedeutet zum anderen: 
+5. Schneidet die x-Achse mit der Steigung -8 
+bedeutet zum anderen: 
  
 f<sub>(x)</sub> = 0 --> 
 
-                        -8
-ax<sup>4</sup> + bx<sup>3</sup> = 0 (a = ------------- und b = -8a eingesetzt) 
-                     4x<sup>3</sup> - 24x<sup>2</sup>   
+ax<sup>4</sup> + bx<sup>3</sup> = 0 
+                     
+          -8
+(a = ------------- und b = -8a eingesetzt) 
+      4x<sup>3</sup> - 24x<sup>2</sup>
  
      -8x<sup>4</sup>                     -8    
--------------- - 8x<sup>3</sup> * ------------- = 0 | * (4x<sup>3</sup> - 24x<sup>2</sup>) 
+-------------- - 8x<sup>3</sup> * ------------- = 0 |*(4x<sup>3</sup> - 24x<sup>2</sup>) 
   4x<sup>3</sup> - 24x<sup>2</sup>              4x<sup>3</sup> - 24x<sup>2</sup> 
 
  -8x<sup>4</sup> + 64x<sup>3</sup> = 0 
