--- a/Steck_Aufgabe88.html
+++ b/Steck_Aufgabe88.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe88.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Hat im Punkt (0|0) eine waagerechte Tangente bedeutet zum einen:  
+1. Hat im Punkt (0|0) eine waagerechte Tangente 
+bedeutet zum einen:  
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 0 -->
 
 e = 0 
 
-2. Hat im Punkt (0|0) eine waagerechte Tangente bedeutet zum anderen: 
+2. Hat im Punkt (0|0) eine waagerechte Tangente 
+bedeutet zum anderen: 
 
 f’<sub>(0)</sub> = 0 --> 
 
@@ -50,8 +53,8 @@ f’<sub>(0)</sub> = 0 -->
 
 d = 0 
 
-3. Hat in (-2|2) einen Sattelpunkt bedeutet erstens: 
-(d = 0 und e = 0 eingesetzt) 
+3. Hat in (-2|2) einen Sattelpunkt bedeutet 
+erstens: (d = 0 und e = 0 eingesetzt) 
 
 f<sub>(-2)</sub> = 2 --> 
 
@@ -59,8 +62,8 @@ a * (-2)<sup>4</sup> + b * (-2)<sup>3</sup> + c * (-2)<sup>2</sup> = 2 -->
 
 16a - 8b + 4c = 2       I 
 
-4. Hat in (-2|2) einen Sattelpunkt bedeutet zweitens: 
-(d = 0 eingesetzt) 
+4. Hat in (-2|2) einen Sattelpunkt bedeutet 
+zweitens: (d = 0 eingesetzt) 
 
 f’<sub>(-2)</sub> = 0 --> 
 
@@ -68,7 +71,8 @@ f’<sub>(-2)</sub> = 0 -->
 
 -32a + 12b - 4c = 0                 II 
 
-5. Hat in (-2|2) einen Sattelpunkt bedeutet drittens: 
+5. Hat in (-2|2) einen Sattelpunkt bedeutet 
+drittens: 
 
 f’’<sub>(-2)</sub> = 0 --> 
 
