--- a/Steck_Aufgabe89.html
+++ b/Steck_Aufgabe89.html
@@ -23,8 +23,8 @@ Steigung -18. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe89.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -34,7 +34,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c
 
 3 Bedingungen: 
 
-1. Hat einen Wendepunkt im Punkt (3|31,5) bedeutet zum einen:  
+1. Hat einen Wendepunkt im Punkt (3|31,5) bedeutet 
+zum einen:  
  
 f<sub>(3)</sub> = 31,5 --> 
 
@@ -42,7 +43,8 @@ a * 3<sup>4</sup> + c * 3<sup>2</sup> + e = 31,5 -->
 
 81a + 9c + e = 31,5       I 
  
-2. Hat einen Wendepunkt im Punkt (3|31,5) bedeutet zum anderen:  
+2. Hat einen Wendepunkt im Punkt (3|31,5) bedeutet 
+zum anderen:  
  
 f’’<sub>(3)</sub> = 0 --> 
 
