--- a/Steck_Aufgabe90.html
+++ b/Steck_Aufgabe90.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 90
 
 Die zweite Ableitung einer ganzrationalen 
-Funktion 4. Grades lautet  12x<sup>2</sup> -6. Ihr 
+Funktion 4. Grades lautet 12x<sup>2</sup> - 6. Ihr 
 Graph geht durch (1|2) und (-2|3). 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe90.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Die zweite Ableitung lautet 12x<sup>2</sup> - 6 bedeutet: 
+1. Die zweite Ableitung lautet 12x<sup>2</sup> - 6 
+bedeutet: 
  
 12x<sup>2</sup> - 6 = 12ax<sup>2</sup> + 6bx + 2c 
  
