--- a/Steck_Aufgabe82.html
+++ b/Steck_Aufgabe82.html
@@ -24,8 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe82.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -35,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c
 
 3 Bedingungen: 
  
-1. Hat im Punkt (2|0) einen Wendepunkt bedeutet zum einen:  
+1. Hat im Punkt (2|0) einen Wendepunkt bedeutet 
+zum einen:  
  
 f<sub>(2)</sub> = 0 --> 
 
@@ -43,7 +44,8 @@ a * 2<sup>4</sup> + c * 2<sup>2</sup> + e = 0 -->
 
 16a + 4c + e = 0       I 
  
-2. Hat im Punkt (2|0) einen Wendepunkt bedeutet zum anderen:  
+2. Hat im Punkt (2|0) einen Wendepunkt bedeutet 
+zum anderen:  
  
 f’’<sub>(2)</sub> = 0 --> 
 
@@ -51,7 +53,8 @@ f’’<sub>(2)</sub> = 0 -->
 
 48a + 2c = 0       II 
  
-3. Die Wendetangente hat eine Steigung von -2 bedeutet: 
+3. Die Wendetangente hat eine Steigung von -2 
+bedeutet: 
  
 f’<sub>(2)</sub> = - 2 --> 
 
