--- a/Steck_Aufgabe100.html
+++ b/Steck_Aufgabe100.html
@@ -24,8 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe100.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -35,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c
 
 3 Bedingungen:
 
-1. Berührt bei x = 2 die x-Achse bedeutet zum einen: 
+1. Berührt bei x = 2 die x-Achse bedeutet zum 
+einen: 
  
 f<sub>(2)</sub> = 0 --> 
 
@@ -43,7 +44,8 @@ a * 2<sup>4</sup> + c * 2<sup>2</sup> + e = 0 -->
 
 16a + 4c + e = 0         I  
  
-2. Berührt bei x = 2 die x-Achse bedeutet zum anderen: 
+2. Berührt bei x = 2 die x-Achse bedeutet zum 
+anderen: 
  
 f’<sub>(2)</sub> = 0 --> 
 
@@ -86,11 +88,12 @@ Gesuchte Funktionsgleichung:
 
 Alternative Lösung: 
 
-Berührpunkt (doppelte Nullstelle) bei x = 2 entspricht 
-den Linearfaktoren von (x - 2)<sup>2</sup> 
+Berührpunkt (doppelte Nullstelle) bei x = 2 
+entspricht den Linearfaktoren von (x - 2)<sup>2</sup> 
 
 Wegen Achsensymmetrie gibt es einen Berührpunkt 
-bei x = -2, entspricht den Linearfaktoren von (x + 2)<sup>2</sup> 
+bei x = -2, entspricht den Linearfaktoren 
+von (x + 2)<sup>2</sup> 
 
 f<sub>(x)</sub> = a * (x + 2)<sup>2</sup>(x - 2)<sup>2</sup> 
 
