--- a/Steck_Aufgabe92.html
+++ b/Steck_Aufgabe92.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe92.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Hat im Punkt (0|0), dem Wendepunkt, bedeutet zum einen:  
+1. Hat im Punkt (0|0), dem Wendepunkt, bedeutet 
+zum einen:  
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 0 -->
 
 e = 0  
  
-2. Hat im Punkt (0|0), dem Wendepunkt, bedeutet zum anderen:  
+2. Hat im Punkt (0|0), dem Wendepunkt, bedeutet 
+zum anderen:  
  
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -61,8 +64,8 @@ f'<sub>(0)</sub> = 1 -->
 
 d = 1 
  
-4. Hat im Punkt (2|4) die Steigung 0 bedeutet zum einen: 
-(c = 0 und  d = 1 und e = 0 eingesetzt)  
+4. Hat im Punkt (2|4) die Steigung 0 bedeutet zum 
+einen: (c = 0 und  d = 1 und e = 0 eingesetzt)  
  
 f<sub>(2)</sub> = 4 --> 
 
@@ -70,8 +73,8 @@ a * 24 + b * 2<sup>3</sup> + 2 = 4 -->
 
 16a + 8b + 2 = 4       I 
  
-5. Hat im Punkt (2|4) die Steigung 0 bedeutet zum anderen: 
-(c = 0 und  d = 1 eingesetzt)  
+5. Hat im Punkt (2|4) die Steigung 0 bedeutet zum 
+anderen: (c = 0 und  d = 1 eingesetzt)  
  
 f’<sub>(2)</sub> = 0 --> 
 
