--- a/Steck_Aufgabe93.html
+++ b/Steck_Aufgabe93.html
@@ -18,14 +18,15 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 93
 
 Der Graph einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades geht durch den Koordinatenursprung 
-und schneidet die x-Achse an der Stelle x = 3 mit der 
-Steigung -48. Wie lautet seine Funktionsgleichung? 
+Funktion 4. Grades geht durch den Koordinaten-
+ursprung und schneidet die x-Achse an der Stelle 
+x = 3 mit der Steigung -48. 
+Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe93.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -43,8 +44,8 @@ a * 0<sup>4</sup> + c * 0<sup>2</sup> + e = 0 -->
 
 e = 0           
  
-2. Schneidet die x-Achse an der Stelle x = 3 bedeutet: 
-(e = 0 eingesetzt) 
+2. Schneidet die x-Achse an der Stelle x = 3 
+bedeutet: (e = 0 eingesetzt) 
  
 f<sub>(3)</sub> = 0 --> 
 
@@ -52,8 +53,8 @@ a * 34 + c * 3<sup>2</sup> = 0 -->
 
 81a + 9c = 0          I 
  
-3. Schneidet die x-Achse an der Stelle x = 3 mit der 
-Steigung -48 bedeutet:  
+3. Schneidet die x-Achse an der Stelle x = 3 mit 
+der Steigung -48 bedeutet:  
  
 f’<sub>(3)</sub> = - 48 --> 
 
