--- a/Steck_Aufgabe94.html
+++ b/Steck_Aufgabe94.html
@@ -18,14 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 94
 
 Der Graph einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades hat in (2|- 20/3) einen Wendepunkt 
-mit einer Steigung von -16/3. 
+Funktion 4. Grades hat in (2|- 20/3) einen 
+Wendepunkt mit einer Steigung von -16/3. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe94.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -35,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c
 
 3 Bedingungen: 
 
-1. Hat in (2|- 20/3) einen Wendepunkt bedeutet zum einen: 
+1. Hat in (2|- 20/3) einen Wendepunkt bedeutet 
+zum einen: 
  
 f<sub>(2)</sub> = -20/3 --> 
 
@@ -43,7 +44,8 @@ a * 2<sup>4</sup> + c * 2<sup>2</sup> + e = -20/3 -->
  
 16a + 4c + e = -20/3        I   
  
-2. Hat in (2|-20/3) einen Wendepunkt bedeutet zum anderen: 
+2. Hat in (2|-20/3) einen Wendepunkt bedeutet 
+zum anderen: 
  
 f’’<sub>(2)</sub> = 0 --> 
 
