--- a/Steck_Aufgabe95.html
+++ b/Steck_Aufgabe95.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe95.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Hat im Punkt (0|0) einen Sattelpunkt bedeutet erstens:
+1. Hat im Punkt (0|0) einen Sattelpunkt bedeutet 
+erstens:
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 0 -->
 
 e = 0 
 
-2. Hat im Punkt (0|0) einen Sattelpunkt bedeutet zweitens:  
+2. Hat im Punkt (0|0) einen Sattelpunkt bedeutet 
+zweitens:  
 
 f’<sub>(0)</sub> = 0 --> 
 
@@ -50,7 +53,8 @@ f’<sub>(0)</sub> = 0 -->
 
 d = 0 
 
-3. Hat im Punkt (0|0) einen Sattelpunkt bedeutet drittens:  
+3. Hat im Punkt (0|0) einen Sattelpunkt bedeutet 
+drittens:  
 
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -60,8 +64,8 @@ f’’<sub>(0)</sub> = 0 -->
 
 c = 0 
 
-4. Hat im Punkt (1|1) einen Wendepunkt bedeutet zum einen: 
-(c = 0 und d = 0 und e = 0 eingesetzt) 
+4. Hat im Punkt (1|1) einen Wendepunkt bedeutet 
+zum einen: (c = 0 und d = 0 und e = 0 eingesetzt) 
 
 f<sub>(1)</sub> = 1 --> 
 
@@ -69,8 +73,8 @@ a * 14 + b * 1<sup>3</sup> = 1 -->
 
 a + b = 1        I  
 
-5. Hat im Punkt (1|1) einen Wendepunkt bedeutet zum anderen: 
-(c = 0 und d = 0 eingesetzt) 
+5. Hat im Punkt (1|1) einen Wendepunkt bedeutet 
+zum anderen: (c = 0 und d = 0 eingesetzt) 
 
 f’’<sub>(1)</sub> = 0 --> 
 
