--- a/Steck_Aufgabe96.html
+++ b/Steck_Aufgabe96.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe96.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Berührt an der Stelle x = -1 die x-Achse bedeutet zum einen:
+1. Berührt an der Stelle x = -1 die x-Achse 
+bedeutet zum einen:
 
 f<sub>(-1)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * (-1)<sup>4</sup> + b * (-1)<sup>3</sup> + c * (-1)<sup>2</sup> + d * (-1) + 
 
 a - b + c - d + e = 0        I 
 
-2. Berührt an der Stelle x = -1 die x-Achse bedeutet zum anderen: 
+2. Berührt an der Stelle x = -1 die x-Achse 
+bedeutet zum anderen: 
 
 f’<sub>(-1)</sub> = 0 --> 
 
@@ -50,7 +53,8 @@ f’<sub>(-1)</sub> = 0 -->
 
 -4a + 3b - 2c + d = 0       II 
 
-3. Hat im Punkt (2|6,75) einen Sattelpunkt bedeutet erstens: 
+3. Hat im Punkt (2|6,75) einen Sattelpunkt 
+bedeutet erstens: 
 
 f<sub>(2)</sub> = 6,75 --> 
 
@@ -58,7 +62,8 @@ a * 2<sup>4</sup> + b * 2<sup>3</sup> + c * 2<sup>2</sup> + d * 2 + e = 6,75 -->
 
 16a + 8b + 4c + 2d + e = 6,75              III 
 
-4. Hat im Punkt (2|6,75) einen Sattelpunkt bedeutet zweitens:  
+4. Hat im Punkt (2|6,75) einen Sattelpunkt 
+bedeutet zweitens:  
 
 f’<sub>(2)</sub> = 0 --> 
 
@@ -66,7 +71,8 @@ f’<sub>(2)</sub> = 0 -->
 
 32a + 12b + 4c + d = 0        IV 
 
-5. Hat im Punkt (2|6,75) einen Sattelpunkt bedeutet drittens:  
+5. Hat im Punkt (2|6,75) einen Sattelpunkt 
+bedeutet drittens:  
 
 f’’<sub>(2)</sub> = 0 --> 
 
