--- a/Steck_Aufgabe97.html
+++ b/Steck_Aufgabe97.html
@@ -24,8 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe97.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -43,8 +43,8 @@ a * 0<sup>4</sup> + c * 0<sup>2</sup> + e = 2 -->
 
 e = 2 
  
-2. Hat in (1|0) einen Tiefpunkt bedeutet zum einen: 
-(e = 2 eingesetzt) 
+2. Hat in (1|0) einen Tiefpunkt bedeutet zum 
+einen: (e = 2 eingesetzt) 
  
 f<sub>(1)</sub> = 0 --> 
 
@@ -52,7 +52,8 @@ a * 14 + c * 1<sup>2</sup> + 2 = 0 -->
 
 a + c + 2 = 0       I 
  
-3. Hat in (1|0) einen Tiefpunkt bedeutet zum anderen:  
+3. Hat in (1|0) einen Tiefpunkt bedeutet zum 
+anderen:  
  
 f’<sub>(1)</sub> = 0 --> 
 
