--- a/Steck_Aufgabe98.html
+++ b/Steck_Aufgabe98.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe98.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -43,8 +44,8 @@ a * (-2)<sup>4</sup> + b * (-2)<sup>3</sup> + c * (-2)<sup>2</sup> + d * (-2) + 
 
 16a - 8b + 4c - 2d + e = -4      I 
 
-2. Hat im Koordinatenursprung ein relatives Minimum 
-bedeutet zum einen:  
+2. Hat im Koordinatenursprung ein relatives 
+Minimum bedeutet zum einen:  
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -52,8 +53,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 0 -->
 
 e = 0 
 
-3. Hat im Koordinatenursprung ein relatives Minimum 
-bedeutet zum anderen:  
+3. Hat im Koordinatenursprung ein relatives 
+Minimum bedeutet zum anderen:  
 
 f’<sub>(0)</sub> = 0 --> 
 
@@ -61,8 +62,8 @@ f’<sub>(0)</sub> = 0 -->
 
 d = 0 
 
-4. Hat im Punkt (- 1|0) die Steigung 3 bedeutet zum einen: 
-(d = 0 und  e = 0 eingesetzt)  
+4. Hat im Punkt (- 1|0) die Steigung 3 bedeutet 
+zum einen: (d = 0 und  e = 0 eingesetzt)  
 
 f<sub>(-1)</sub> = 0 --> 
 
@@ -70,8 +71,8 @@ a * (-1)<sup>4</sup> + b * (-1)<sup>3</sup> + c * (-1)<sup>2</sup> = 0 -->
 
 a - b + c = 0       II 
 
-5. Hat im Punkt (- 1|0) die Steigung 3 bedeutet zum einen: 
-(d = 0 eingesetzt)  
+5. Hat im Punkt (- 1|0) die Steigung 3 bedeutet 
+zum anderen: (d = 0 eingesetzt)  
 
 f’<sub>(-1)</sub> = 3 --> 
 
