--- a/Steck_Aufgabe99.html
+++ b/Steck_Aufgabe99.html
@@ -26,8 +26,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe99.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -136,7 +136,8 @@ bedeutet zum anderen:
  
 f’<sub>(0)</sub> = 0 --> 
 
-4a * 0<sup>3</sup> + 2c * 0 = 0 liefert kein Ergebnis 
+4a * 0<sup>3</sup> + 2c * 0 = 0 liefert kein 
+Ergebnis 
  
 I * (-2) (e = 4 eingesetzt) + II 
 
