--- a/Steck_Aufgabe91.html
+++ b/Steck_Aufgabe91.html
@@ -18,14 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 91
 
 Der Graph einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades hat im Punkt (2|0) die Steigung 2 
-und bei x = -1 einen Wendepunkt. 
+Funktion 4. Grades hat im Punkt (2|0) die 
+Steigung 2 und bei x = -1 einen Wendepunkt. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe91.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -35,7 +35,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c
 
 3 Bedingungen: 
 
-1. Hat im Punkt (2|0) die Steigung 2 bedeutet zum einen: 
+1. Hat im Punkt (2|0) die Steigung 2 bedeutet zum 
+einen: 
  
 f<sub>(2)</sub> = 0 --> 
 
@@ -43,7 +44,8 @@ a * 2<sup>4</sup> + c * 2<sup>2</sup> + e = 0 -->
 
 16a + 4c + e = 0          I 
  
-2. Hat im Punkt (2|0) die Steigung 2 bedeutet zum anderen: 
+2. Hat im Punkt (2|0) die Steigung 2 bedeutet zum 
+anderen: 
  
 f’<sub>(2)</sub> = 2 --> 
 
