--- a/Steck_Aufgabe101.html
+++ b/Steck_Aufgabe101.html
@@ -24,8 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe101.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -90,15 +90,19 @@ Gesuchte Funktionsgleichung:
  
 Alternative Lösung: 
  
-Nullstelle bei x = -5 entspricht dem Linearfaktor (x + 5)  
+Nullstelle bei x = -5 entspricht dem 
+Linearfaktor (x + 5)  
  
-Nullstelle bei x = 3 entspricht dem Linearfaktor (x - 3)  
+Nullstelle bei x = 3 entspricht dem 
+Linearfaktor (x - 3)  
  
 Wegen Symmetrie: 
  
-Nullstelle bei x = 5 entspricht dem Linearfaktor (x - 5)  
+Nullstelle bei x = 5 entspricht dem 
+Linearfaktor (x - 5)  
  
-Nullstelle bei x = -3 entspricht dem Linearfaktor (x + 3)  
+Nullstelle bei x = -3 entspricht dem 
+Linearfaktor (x + 3)  
  
 f<sub>(x)</sub> = a * (x + 5)(x - 3)(x - 5)(x + 3) 
  
