--- a/Steck_Aufgabe102.html
+++ b/Steck_Aufgabe102.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe102.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -35,7 +36,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 6bx + 2c
 
 5 Bedingungen: 
 
-1. Hat bei (0|0) einen Extremwert bedeutet zum einen:  
+1. Hat bei (0|0) einen Extremwert bedeutet zum 
+einen:  
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -43,7 +45,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 0 -->
 
 e = 0 
 
-2. Hat bei (0|0) einen Extremwert bedeutet zum anderen: 
+2. Hat bei (0|0) einen Extremwert bedeutet zum 
+anderen: 
 
 f’<sub>(0)</sub> = 0 --> 
 
@@ -51,7 +54,8 @@ f’<sub>(0)</sub> = 0 -->
 
 d = 0 
 
-3. Hat bei (2|0) einen Wendepunkt bedeutet zum einen: 
+3. Hat bei (2|0) einen Wendepunkt bedeutet zum 
+einen: 
 (d = 0 und e = 0 eingesetzt) 
 
 f<sub>(2)</sub> = 0 --> 
@@ -60,7 +64,8 @@ a * 2<sup>4</sup> + b * 2<sup>3</sup> + c * 2<sup>2</sup> = 0 -->
 
 16a + 8b + 4c = 0        I  
 
-4. Hat bei (2|0) einen Wendepunkt bedeutet zum anderen:  
+4. Hat bei (2|0) einen Wendepunkt bedeutet zum 
+anderen:  
 
 f’’<sub>(2)</sub> = 0 --> 
 
