--- a/Steck_Aufgabe103.html
+++ b/Steck_Aufgabe103.html
@@ -24,7 +24,8 @@ Wie lautet die Funktionsgleichung?
 
 <img src="Aufgabe103.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
