--- a/Steck_Aufgabe104.html
+++ b/Steck_Aufgabe104.html
@@ -19,12 +19,13 @@
 
 Der Graph einer ganzrationalen Funktion 4. Grades 
 schneidet die y-Achse bei 4, berührt die x-Achse 
-bei x = 2 und hat im Punkt (1|2,25) die Steigung -3. 
-Wie lautet seine Funktionsgleichung?
+bei x = 2 und hat im Punkt (1|2,25) die 
+Steigung -3. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe104.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 4. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 4. Grades: 
 
 f<sub>(x)</sub> = ax<sup>4</sup> + bx<sup>3</sup> + cx<sup>2</sup> + dx + e 
 
@@ -42,8 +43,8 @@ a * 0<sup>4</sup> + b * 0<sup>3</sup> + c * 0<sup>2</sup> + d * 0 + e = 4 -->
 
 e = 4 
 
-2. Berührt die x-Achse bei x = 2 bedeutet zum einen: 
-(e = 4 eingesetzt) 
+2. Berührt die x-Achse bei x = 2 bedeutet zum 
+einen: (e = 4 eingesetzt) 
 
 f<sub>(2)</sub> = 0 --> 
 
@@ -51,7 +52,8 @@ a * 2<sup>4</sup> + b * 2<sup>3</sup> + c * 2<sup>2</sup> + d * 2 + 4 = 0 -->
 
 16a + 8b + 4c + 2d + 4 = 0         I 
 
-3. Berührt die x-Achse bei x = 2 bedeutet zum anderen: 
+3. Berührt die x-Achse bei x = 2 bedeutet zum 
+anderen: 
 
 f’<sub>(2)</sub> = 0 --> 
 
@@ -59,8 +61,8 @@ f’<sub>(2)</sub> = 0 -->
 
 32a + 12b + 4c + d = 0            II 
 
-4. Hat im Punkt (1|2,25) die Steigung -3 bedeutet zum einen: 
-(e = 4 eingesetzt) 
+4. Hat im Punkt (1|2,25) die Steigung -3 bedeutet 
+zum einen: (e = 4 eingesetzt) 
 
 f<sub>(1)</sub> = 2,25 --> 
 
@@ -68,7 +70,8 @@ a * 1<sup>4</sup> + b * 1<sup>3</sup> + c * 1<sup>2</sup> + d * 1 + 4 = 2,25 -->
 
 a + b + c + d + 4 = 2,25       III 
 
-5. Hat im Punkt (1|2,25) die Steigung -3 bedeutet zum anderen: 
+5. Hat im Punkt (1|2,25) die Steigung -3 bedeutet 
+zum anderen: 
 
 f’<sub>(1)</sub> = -3 --> 
 
