--- a/Steck_Aufgabe105.html
+++ b/Steck_Aufgabe105.html
@@ -25,8 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe105.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
@@ -36,7 +36,8 @@ f’’<sub>(x)</sub> = 12ax<sup>2</sup> + 2c
 
 3 Bedingungen : 
  
-1. Geht durch den Punkt 24 auf der y-Achse bedeutet: 
+1. Geht durch den Punkt 24 auf der y-Achse 
+bedeutet: 
  
 f<sub>(0)</sub> = 24 --> 
 
@@ -44,7 +45,8 @@ a * 0<sup>4</sup> + c * 0<sup>2</sup> + e = 24 -->
 
 e = 24 
  
-2. Hat an der Stelle x = 1 die Steigung -36 bedeutet: 
+2. Hat an der Stelle x = 1 die Steigung -36 
+bedeutet: 
  
 f’<sub>(1)</sub> = -36 --> 
 
