--- a/Steck_Aufgabe106.html
+++ b/Steck_Aufgabe106.html
@@ -25,8 +25,8 @@ Geraden y = -36x + 82 und geht durch den Punkt
 
 <img src="Aufgabe106.jpg" >
 
-Allgemeine Form einer achsensymmetrischen ganzrationalen 
-Funktion 4. Grades: 
+Allgemeine Form einer achsensymmetrischen 
+ganzrationalen Funktion 4. Grades: 
  
 f<sub>(x)</sub> = ax<sup>4</sup> + cx<sup>2</sup> + e 
  
