--- a/Steck_Aufgabe107.html
+++ b/Steck_Aufgabe107.html
@@ -38,7 +38,8 @@ f’’<sub>(x)</sub> = 20ax<sup>3</sup> + 6cx
  
 5 Bedingungen : (2 mehr als nötig) 
  
-1. Hat in (0|0) einen Sattelpunkt bedeutet erstens: 
+1. Hat in (0|0) einen Sattelpunkt bedeutet 
+erstens: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -46,7 +47,8 @@ a * 0<sup>5</sup> + c * 0<sup>3</sup> + e = 0 -->
 
 0 = 0 liefert kein Ergebnis   
  
-2. Hat in (0|0) einen Sattelpunkt bedeutet zweitens: 
+2. Hat in (0|0) einen Sattelpunkt bedeutet 
+zweitens: 
  
 f’<sub>(0)</sub> = 0 --> 
 
@@ -54,7 +56,8 @@ f’<sub>(0)</sub> = 0 -->
 
 e = 0 
  
-3. Hat in (0|0) einen Sattelpunkt bedeutet drittens: 
+3. Hat in (0|0) einen Sattelpunkt bedeutet 
+drittens: 
  
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -62,14 +65,16 @@ f’’<sub>(0)</sub> = 0 -->
 
 0 = 0 liefert kein Ergebnis 
  
-4. Hat in (2|-16/15) einen Tiefpunkt bedeutet zum einen: 
+4. Hat in (2|-16/15) einen Tiefpunkt bedeutet zum 
+einen: 
 (e = 0 eingesetzt) 
  
 f<sub>(2)</sub> = -16/15 --> 
 
 a * 2<sup>5</sup> + c * 2<sup>3</sup> = 32a + 8c = -16/15        I 
  
-5. Hat in (2|-16/15) einen Tiefpunkt bedeutet zum zweiten:  
+5. Hat in (2|-16/15) einen Tiefpunkt bedeutet zum 
+zweiten:  
  
 f’(2) = 0 --> 
 
