--- a/Steck_Aufgabe108.html
+++ b/Steck_Aufgabe108.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 108
 
 Der Graph einer ganzrationalen Funktion 5. Grades 
-geht durch (0|0), hat in (-1|-2/3) einen Wendepunkt 
-mit der Steigung 1,25 und einen bei (-2|-4/3). 
-Wie lautet seine Funktionsgleichung?
+geht durch (0|0), hat in (-1|-2/3) einen 
+Wendepunkt mit der Steigung 1,25 und einen bei 
+(-2|-4/3). Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe108.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 5. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 5. Grades: 
 
 f<sub>(x)</sub> = ax<sup>5</sup> + bx<sup>4</sup> + cx<sup>3</sup> + dx<sup>2</sup> + ex + f 
 
@@ -42,8 +43,8 @@ a * 0<sup>5</sup> + b * 0<sup>4</sup> + c * 0<sup>3</sup> + d * 0<sup>2</sup> + 
 
 f = 0  
 
-2. Hat in (-1|-2/3) einen Wendepunkt bedeutet zum einen: 
-(f = 0 eingesetzt) 
+2. Hat in (-1|-2/3) einen Wendepunkt bedeutet zum 
+einen: (f = 0 eingesetzt) 
 
 f<sub>(-1)</sub> = -2/3 -->  
 
@@ -51,7 +52,8 @@ a * (-1)<sup>5</sup> + b * (-1)<sup>4</sup>+ c * (-1)<sup>3</sup> + d * (-1)<sup
 
 -a + b - c + d - e = -2/3           I 
 
-3. Hat in (- 1|- 2/3) einen Wendepunkt bedeutet zum anderen:  
+3. Hat in (- 1|- 2/3) einen Wendepunkt bedeutet zum 
+anderen:  
 
 f’’<sub>(-1)</sub> = 0 --> 
 
@@ -68,7 +70,8 @@ f’<sub>(-1)</sub> = 1,25 -->
 
 5a - 4b + 3c - 2d + e = 1,25          III 
 
-5. Hat in (-2|-4/3) einen Wendepunkt bedeutet zum einen: 
+5. Hat in (-2|-4/3) einen Wendepunkt bedeutet zum 
+einen: 
 (f = 0 eingesetzt) 
 
 f<sub>(-2)</sub> = -4/3 -->  
@@ -77,7 +80,8 @@ a * (-2)<sup>5</sup> + b * (-2)<sup>4</sup> + c * (-2)<sup>3</sup> + d * (-2)<su
 
  -32a + 16b - 8c + 4d - 2e = -4/3      IV 
  
-6. Hat in (-2|-4/3) einen Wendepunkt bedeutet zum anderen:  
+6. Hat in (-2|-4/3) einen Wendepunkt bedeutet zum 
+anderen:  
  
 ’’<sub>(-2)</sub> = 0 --> 
 
@@ -171,7 +175,8 @@ a = 0,25 und b = 1,25 in X eingesetzt:
  
                          c = 5/3 
  
-a = 0,25 und b = 1,25 und c = 5/3 in VII eingesetzt: 
+a = 0,25 und b = 1,25 und c = 5/3 in VII 
+eingesetzt: 
 
  -30 * 0,25 + 14 * 1,25 - 6 * 5/3 + 2d = 0 
  
@@ -188,9 +193,9 @@ in III eingesetzt:
  
                          1,25 - 5 + 5 + e = 1,25 
  
-                                 1,25 + e = 1,25 |-1,25 
+                           1,25 + e = 1,25 |-1,25 
  
-                                        e = 0 
+                                  e = 0 
  
 Gesuchte Funktionsgleichung: 
  
