--- a/Steck_Aufgabe109.html
+++ b/Steck_Aufgabe109.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe109.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 6. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 6. Grades: 
 
 f<sub>(x)</sub> = ax<sup>6</sup> + bx<sup>5</sup> + cx<sup>4</sup> + dx<sup>3</sup> + ex<sup>2</sup> + fx + g 
 
@@ -35,8 +36,8 @@ f’’<sub>(x)</sub> = 30ax<sup>4</sup> + 20bx<sup>3</sup> + 12cx<sup>2</sup> +
 
 7 Bedingungen : 
 
-1. Hat in (0|1) einen Wendepunkt mit waagerechter Tangente
-(Sattelpunkt) bedeutet erstens: 
+1. Hat in (0|1) einen Wendepunkt mit waagerechter 
+Tangente(Sattelpunkt) bedeutet erstens: 
 
 f<sub>(x)</sub> = 1 --> 
 
@@ -44,8 +45,8 @@ a * 0<sup>6</sup> + b * 0<sup>5</sup> + c * 0<sup>4</sup> + d * 0<sup>3</sup> + 
 
 g = 1  
 
-2. Hat in (0|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet zweitens: 
+2. Hat in (0|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet zweitens: 
 
 f’<sub>(0)</sub> = 0 --> 
 
@@ -53,8 +54,8 @@ f’<sub>(0)</sub> = 0 -->
 
 f = 0 
 
-3. Hat in (0|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet drittens: 
+3. Hat in (0|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet drittens: 
 
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -86,8 +87,8 @@ a * 2<sup>6</sup> + b * 2<sup>5</sup> + c * 2<sup>4</sup> + d * 2<sup>3</sup> + 
  
     64a + 32b + 16c + 8d = 48          II   
  
-6. Hat in (1|0) einen Tiefpunkt bedeutet zum einen: 
-(e = 0 und f = 0 und g = 1 eingesetzt) 
+6. Hat in (1|0) einen Tiefpunkt bedeutet zum 
+einen: (e = 0 und f = 0 und g = 1 eingesetzt) 
 
 f<sub>(1)</sub> = 0 --> 
 
@@ -97,8 +98,8 @@ a + b + c + d + 1 = 0 |-1
  
 a + b + c + d = - 1          III                  
  
-7. Hat in (1|0) einen Tiefpunkt bedeutet zum anderen: 
-(e = 0 und f = 0  eingesetzt) 
+7. Hat in (1|0) einen Tiefpunkt bedeutet zum 
+anderen: (e = 0 und f = 0  eingesetzt) 
  
 f’<sub>(1)</sub> = 0 --> 
 
